# artemanga

./: Dockerfile  dev-compose.yml  ejemplo.env  npm.yml  okteto-compose.yml  prod-compose.yml  pyproject.toml
.github/workflows/: ci.yml  okteto_crear.yml  okteto_destruir.yml
docs/: desarrollo.md  requirements.txt
docs/source/: conf.py  index.md
docs/source/desarollo/: componentes.md  flujo.md
docs/source/entorno/: dependencias.md
docs/source/git/: ayuda.md
nginx/: nginx.conf
src/: entrypoint.sh  manage.py
src/analitica/: admin.py  models.py  reportador.py  urls.py  views.py
src/analitica/chartjs/: excepciones.py  factory.py  models.py  utils.py
src/analitica/migrations/: 0001_initial.py  0002_pagina_titulo.py
src/artemangaweb/: asgi.py  contexto_comun.py  exceptions.py  mixins.py  settings.py  urls.py  wsgi.py
src/artemangaweb/tests/: test_poblar_db.py
src/catalogo/: admin.py  models.py  urls.py  views.py
src/contacto/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
src/cuenta_usuario/: admin.py  apps.py  forms.py  models.py  restriccion.py  signals.py  urls.py  validators.py  views.py
src/cuentausuario/: apps.py  models.py
src/datos_prueba/: datos_localidad.py
src/despacho/: admin.py  models.py
src/inventario/: admin.py  exceptions.py  form.py  forms.py  models.py  signals.py  urls.py  views.py
src/notificaciones/: apps.py  contacto.py  cuenta_usuario.py  emailer.py  inventario.py  venta.py
src/sistema/: admin.py  models.py
src/venta/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
(+224 files in other folders)
