[tool.poetry]
name = "artemangaweb"
version = "0.1.0"
description = "Plataforma e-commerce para ArteManga"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"
psycopg2 = "^2.9.3"
Faker = "^13.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
