[tool.poetry]
name = "artemangaweb"
version = "0.1.0"
description = "Plataforma e-commerce para ArteManga"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
Faker = "^13.3.4"
tqdm = "^4.64.0"
Pillow = "^9.1.0"
psycopg2-binary = "^2.9.3"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
django-extensions = "^3.1.5"
django-post-office = "^3.6.0"
whitenoise = "^6.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
